package vues;

import donnees.Colonne;
import java.util.List;

public interface Observateur {
    void actualiser();
}
